# template_client

./: .devcontainer.json  .gitignore  .ruff.toml  LICENSE  README.md  pyproject.toml  requirements.txt  requirements_test.txt  setup.py
.github/: renovate.json
.github/workflows/: lint.yml  python-publish.yml  test.yml
scripts/: setup
template_client/: __init__.py  client.py
tests/: test__init__.py  test_client.py
